--- a/midway/tsconfig.json
+++ b/midway/tsconfig.json
@@ -8,10 +8,11 @@
     "emitDecoratorMetadata": true,
     "inlineSourceMap":true,
     "noImplicitThis": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "stripInternal": true,
     "skipLibCheck": true,
     "esModuleInterop":true,
+    "noUnusedParameters": false,
     "pretty": true,
     "declaration": true,
     "forceConsistentCasingInFileNames": true,
