--- a/midway/package.json
+++ b/midway/package.json
@@ -12,11 +12,12 @@
     "@midwayjs/info": "^3.0.0",
     "@midwayjs/koa": "^3.0.0",
     "@midwayjs/logger": "^2.14.0",
+    "@midwayjs/typeorm": "^3.0.0",
     "@midwayjs/validate": "^3.0.0",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.9",
-    "typeorm": "^0.3.10"
+    "typeorm": "~0.3.0"
   },
   "devDependencies": {
     "@midwayjs/cli": "^1.2.90",
